# websocket-std

./: LICENSE
certs/: db.txt  gen_certs.sh
certs/example/: example.cfg  example.com.csr  example.com.der  example.com.key
certs/newcerts/: 0C623BDB92825797029C263DFE3889305784469A.pem
certs/rootCA/: cert.der  cert.pem  cert.srl  openssl_ca.cfg  openssl_root.cfg  private.key
examples/: Cargo.toml  simple_client.rs  simple_tls_client.rs  thread_client.rs
ffi/: example.c  websocket-std.h
websocket/: Cargo.toml
websocket/src/: extension.rs  lib.rs  result.rs
websocket/src/core/: net.rs
websocket/src/ffi/: common.rs
websocket/src/ffi/sync/: client.rs
websocket/src/http/: mod.rs  response.rs  url.rs
websocket/src/sync/: client.rs  mod.rs  stream.rs
